--- a/n^p mod m/kaisetsu.tex
+++ b/n^p mod m/kaisetsu.tex
@@ -17,7 +17,7 @@
 % フッターにページ番号を表示するカスタムコマンド
 \makeatletter
 \def\@oddfoot{
-  \hfil \normalsize\rm\thepage\hfil % ページ番号を中央に配置
+  \hfil \normalsize\rmfamily\thepage\hfil % ページ番号を中央に配置
 }
 \def\@evenfoot{\@oddfoot} % 偶数ページにも同じフッターを適用
 \makeatother
