--- a/n^p mod m/kaisetsu.tex
+++ b/n^p mod m/kaisetsu.tex
@@ -26,6 +26,7 @@
 
 \begin{document}
 
+\setcounter{page}{2}
 \section*{問題}
 整数$N, M, P$が与えられる．このとき，$N ^ P$を$M$で割った余りを求めよ．
 
@@ -124,7 +125,7 @@ for文を用いて$ans$に$N$を$P$回かける．計算量は$O(P)$．コード
 \end{tabular}
 \end{table}
 \end{center}
-normalは$P = 9 \cdot 10 ^ 7$でスタックオーバフローでエラーを吐いた．$P = 10 ^ 5$程度までならば，normalとkuhuuの実行時間はほぼ変わらない．しかし，$P = 10 ^ 7$程度までになると，その比は$100$倍以上になっている．kuhuuは$P = 10 ^ 18$まで計測したが，ずっと$1 \mathrm{ms}$であった．
+normalは$P = 9 \cdot 10 ^ 7$でスタックオーバフローでエラーを吐いた．$P = 10 ^ 5$程度までならば，normalとkuhuuの実行時間はほぼ変わらない．しかし，$P = 10 ^ 7$程度までになると，その比は$100$倍以上になっている．kuhuuは$P = 10 ^ {18}$まで計測したが，ずっと$1 \mathrm{ms}$であった．
 
 \section*{まとめ}
 繰り返し$2$乗法の実装は，再帰関数を用いたものと，用いなかったもののどちらも，Github Copilotに大まかに実装してもらい，少し修正を加えている (余りを取るところ．) ．
