--- a/sort/kaisetsu.tex
+++ b/sort/kaisetsu.tex
@@ -53,9 +53,9 @@
 
 \begin{itemize}
   \item 「隣り合う要素を比較して，順番が逆であれば交換する」というのを「操作」と呼ぶことにする．バブルソートは，「操作」を繰り返すことで，数列を昇順に並べ替えるアルゴリズムである．
-  \item $i$回の「操作」を行うと，数列の右端から少なくとも$i$個の要素が正しい順番に並ぶ．$1$回の「操作」で$O(N)$回のアクセスを行い，ソート全体で「操作」が行われる回数は高々$N$回なので，時間計算量は$O(N ^ 2)$である．
-  \item ソートが完了していたら，直ちに処理を終了するような実装をする場合，$1$回の「操作」で終われば，時間計算量は$O(N)$でこれが最良である．
-  \item 逆に，完全に逆順になっている数列に対してバブルソートを行うと，$N$回の「操作」を行うことになり，時間計算量は$O(N ^ 2)$となる．
+  \item $i$回の「操作」を行うと，数列の右端から少なくとも$i$個の要素が正しい順番に並ぶ．$1$回の「操作」で$N - i + 1$回の比較を行い，ソート全体で「操作」が行われる回数は高々$N$回なので，時間計算量は$O(N ^ 2)$である．
+  \item ソートが完了していたら，直ちに処理を終了するような実装をする場合，$1$回の「操作」で終われば，時間計算量は$\Theta(N)$でこれが最良である．
+  \item 逆に，完全に逆順になっている数列に対してバブルソートを行うと，$N$回の「操作」を行うことになり，時間計算量は$\Theta(N ^ 2)$となる．
 \end{itemize}
 
 \section{バケットソート}
@@ -75,7 +75,7 @@
 
 \subsection{二分ヒープ}
 
-一応，二分ヒープの説明をする．ヒープソートはin-placeにやるので，0-indexedの二分ヒープを使う．ノードの添え字は，図\ref{fig:heap}のようにつけ，それぞれのノードに値は値を持っている．
+ヒープソートはin-placeにやるので，0-indexedの二分ヒープを使う．ノードの添え字は，図\ref{fig:heap}のようにつけ，それぞれのノードは値を持っている．
 
 \begin{figure}[h]
   \centering
@@ -109,7 +109,7 @@
       };
   
   \end{tikzpicture}
-  \caption{二分ヒープ}
+  \caption{二分ヒープのindex}
   \label{fig:heap}
 \end{figure}
 
@@ -120,7 +120,7 @@
 \begin{itemize}
   \item 「$i$番目から$0$番目までこの順番で見ていって，逆の順番があれば交換する」というのを「$i$番目の操作」と呼ぶことにする．挿入ソートは，$i = 1, \cdots N - 1$に対して，この順番で$i$番目の操作を行うことで，数列を昇順に並べ替えるアルゴリズムである．
   \item $j$番目の操作までを行ったとき，$j$番目まではソート済みだから，$j + 1$番目の操作では，正しい順番になった瞬間$j + 1$番目の操作を終了することができる．そのため，すでにソートされている場合，$i$番目の操作は$O(1)$だから，時間計算量は$O(N)$でこれが最良である．
-  \item 逆に，完全に逆順になっている数列に対して挿入ソートを行うと，$i$番目の操作では，$O(N)$回のアクセスが行われるため，時間計算量は$O(N ^ 2)$となる．
+  \item 逆に，完全に逆順になっている数列に対して挿入ソートを行うと，$i$番目の操作では，$i$回の比較が行われるため，時間計算量は$\Theta(N ^ 2)$となる．
 \end{itemize}
 
 \section{マージソート}
@@ -128,15 +128,15 @@
 \begin{itemize}
   \item マージソートは，分割統治法を用いたアルゴリズムである．
   \item $N > 2$個の要素を$N / 2$個の要素に分割し，それぞれを再帰的にソートし，$2$つのソート済みの配列の大きくないほうを順番に取り続けるという操作で，$N$個の要素をソートする．$N \le 2$の時は，普通にする．
-  \item マージソートの時間計算量を$T(N)$とおくと，$T(N) = 2T(N / 2) + O(N)$なので，$T(N) = O(N \log N)$である ($O(N)$の$O(\log N)$個の和になっている．) ．
+  \item マージソートの時間計算量を$T(N)$とおくと，$T(N) = 2T(N / 2) + \Theta(N)$なので，$T(N) = \Theta(N \log N)$である ($\Theta(N)$の$\Theta(\log N)$個の和になっている．) ．
 \end{itemize}
 
 \section{クイックソート}
 
 \begin{itemize}
   \item クイックソートは，マージソートとだいたい同じだが分割の仕方が違う．
-  \item ピボット呼ばれる値を$1$つ選び，それ未満とそれ以上に分割する．ピボットの選び方が悪いと，$1$個と$N - 1$個の分割が繰り返されることになって，時間計算量が$O(N ^ 2)$になる．
-  \item ここでは，$0$番目の値をピボットとして選ぶことにしているので，完全に逆順になっていたり，最初からソート済みであったりしたら，時間計算量は$O(N ^ 2)$である．
+  \item ピボット呼ばれる値を$1$つ選び，それ未満とそれ以上に分割する．ピボットの選び方が悪いと，$1$個と$N - 1$個の分割が繰り返されることになって，時間計算量が$\Omega(N ^ 2)$になる．
+  \item ここでは，$0$番目の値をピボットとして選ぶことにしているので，完全に逆順になっていたり，最初からソート済みであったりしたら，時間計算量は$\Theta(N ^ 2)$である．
 \end{itemize}
 
 \section{時間計測}
